[package]
name = "rustcirkeln"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rustcirkeln"
bench = false
crate-type = ["lib"]

[dependencies]
criterion = {version = "0.4.0", features = ["html_reports"]}
pprof = {version = "0.11.1", features = ["flamegraph"]}

[[bench]]
name = "my_bench"
harness = false

[profile.release]
debug = true
